@@ -1,12 +1,11 @@
 requires 'parent' => 0.225;
 requires 'autodie' => 0;
-requires 'namespace::autoclean' => 0;
 requires 'Log::Contextual' => 0.005005;
 requires 'IO::All' => 0.87;
 requires 'DBIx::Class' => 0.08121;
 requires 'Module::Runtime' => 0.001;
 requires 'Moo' => 2.0;
-requires 'Package::Variant' => 0;
+requires 'MooX::Role::Parameterized' => 0.082;
 requires 'Type::Tiny' => '1.004004';
 requires 'Try::Tiny' => 0;
 requires 'SQL::Translator' => 0.11005;
