@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - convert from Package::Variant to MooX::Role::Parameterized - fix #67
 
 0.002228  2019-03-14 07:13:33+00:00 Europe/London
  - IO::All dep to 0.87 in case causing Win32 problem
